Update print statement from 'Hello' to 'Goodbye'

--- a/homepage.html
+++ b/homepage.html
@@ -252,7 +252,7 @@
         const PAY_PER_HOUR = 17.02;
         const PAY_PER_PHONE = 5;
         const PAY_PER_SIGNUP = 35;
-        const SUPABASE_URL = "PASTE_YOUR_SUPABASE_URL_HERE";
+        const SUPABASE_URL = "https://twzsvnegkhkhcgjjasik.supabase.co";
         const SUPABASE_ANON_KEY = "sb_publishable_nHkf-Zy3Tirn0XwLnGIsMw_MI-9zNhL";
         const TABLE_NAME = "daily_tracker";
 
