--- a/homepage.html
+++ b/homepage.html
@@ -139,26 +139,6 @@
         <p class="subtitle">Track daily earnings, reviews, and month totals.</p>
 
         <section class="card">
-            <h2>Account Login</h2>
-            <div class="grid">
-                <div>
-                    <label for="authEmail">Email</label>
-                    <input id="authEmail" type="email" placeholder="you@example.com" autocomplete="email">
-                </div>
-                <div>
-                    <label for="authPassword">Password</label>
-                    <input id="authPassword" type="password" placeholder="Enter your password" autocomplete="current-password">
-                </div>
-            </div>
-            <div class="button-row" style="grid-template-columns: 1fr 1fr 1fr;">
-                <button id="signInBtn" type="button">Sign In</button>
-                <button id="signUpBtn" type="button">Create Account</button>
-                <button id="signOutBtn" type="button" class="secondary">Sign Out</button>
-            </div>
-            <p class="small" id="authStatus">Not signed in.</p>
-        </section>
-
-        <section class="card">
             <div class="grid">
                 <div>
                     <label for="workDate">Date</label>
@@ -257,16 +237,9 @@
         const TABLE_NAME = "daily_tracker";
 
         let supabaseClient = null;
-        let currentUser = null;
 
         const ids = {
             workDate: document.getElementById("workDate"),
-            authEmail: document.getElementById("authEmail"),
-            authPassword: document.getElementById("authPassword"),
-            signInBtn: document.getElementById("signInBtn"),
-            signUpBtn: document.getElementById("signUpBtn"),
-            signOutBtn: document.getElementById("signOutBtn"),
-            authStatus: document.getElementById("authStatus"),
             hoursWorked: document.getElementById("hoursWorked"),
             phonesRepaired: document.getElementById("phonesRepaired"),
             insuranceSignups: document.getElementById("insuranceSignups"),
@@ -353,15 +326,6 @@
             ids.lastMonthRate.textContent = "0.00%";
         }
 
-        function setTrackerEnabled(enabled) {
-            ids.workDate.disabled = !enabled;
-            ids.saveBtn.disabled = !enabled;
-            ids.clearBtn.disabled = !enabled;
-            numberInputs.forEach((input) => {
-                input.disabled = !enabled;
-            });
-        }
-
         function setSyncStatus(text, isError = false) {
             ids.syncStatus.textContent = text;
             ids.syncStatus.style.color = isError ? "#b11a1a" : "#5f6b7a";
@@ -383,105 +347,9 @@
             }
 
             supabaseClient = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-            setSyncStatus("Cloud sync: connected. Please sign in.");
-
-            supabaseClient.auth.onAuthStateChange(async (_, session) => {
-                await handleAuthState(session);
-            });
+            setSyncStatus("Cloud sync: connected.");
 
             return true;
-        }
-
-        function setAuthStatus(text, isError = false) {
-            ids.authStatus.textContent = text;
-            ids.authStatus.style.color = isError ? "#b11a1a" : "#5f6b7a";
-        }
-
-        function getAuthCredentials() {
-            const email = ids.authEmail.value.trim();
-            const password = ids.authPassword.value;
-            return { email, password };
-        }
-
-        async function handleSignIn() {
-            if (!supabaseClient) {
-                alert("Supabase is not configured yet.");
-                return;
-            }
-
-            const { email, password } = getAuthCredentials();
-            if (!email || !password) {
-                alert("Enter email and password.");
-                return;
-            }
-
-            const { error } = await supabaseClient.auth.signInWithPassword({ email, password });
-            if (error) {
-                setAuthStatus(`Sign in failed: ${error.message}`, true);
-                return;
-            }
-
-            setAuthStatus("Signed in.");
-        }
-
-        async function handleSignUp() {
-            if (!supabaseClient) {
-                alert("Supabase is not configured yet.");
-                return;
-            }
-
-            const { email, password } = getAuthCredentials();
-            if (!email || !password) {
-                alert("Enter email and password.");
-                return;
-            }
-
-            const { data, error } = await supabaseClient.auth.signUp({ email, password });
-            if (error) {
-                setAuthStatus(`Create account failed: ${error.message}`, true);
-                return;
-            }
-
-            if (data.session) {
-                setAuthStatus("Account created and signed in.");
-            } else {
-                setAuthStatus("Account created. Check your email if confirmation is enabled.");
-            }
-        }
-
-        async function handleSignOut() {
-            if (!supabaseClient) {
-                return;
-            }
-
-            const { error } = await supabaseClient.auth.signOut();
-            if (error) {
-                setAuthStatus(`Sign out failed: ${error.message}`, true);
-                return;
-            }
-
-            setAuthStatus("Signed out.");
-        }
-
-        async function handleAuthState(session) {
-            currentUser = session?.user || null;
-
-            if (!currentUser) {
-                setTrackerEnabled(false);
-                clearInputs();
-                clearMonthSummary();
-                setSyncStatus("Cloud sync: connected. Please sign in.");
-                if (!ids.authStatus.textContent.includes("failed") && !ids.authStatus.textContent.includes("created")) {
-                    setAuthStatus("Not signed in.");
-                }
-                return;
-            }
-
-            setTrackerEnabled(true);
-            setAuthStatus(`Signed in as ${currentUser.email || "user"}.`);
-            setSyncStatus("Cloud sync: connected and signed in.");
-            await loadSelectedDateData();
-            await renderMonthSummary();
         }
 
         function monthKeyFromDate(dateString) {
@@ -514,14 +382,13 @@
         }
 
         async function fetchRecordsInRange(startDate, endDate) {
-            if (!supabaseClient || !currentUser) {
+            if (!supabaseClient) {
                 return [];
             }
 
             const { data, error } = await supabaseClient
                 .from(TABLE_NAME)
                 .select("day_date, total_pay, five_star_reviews, total_customers")
-                .eq("user_id", currentUser.id)
                 .gte("day_date", startDate)
                 .lte("day_date", endDate)
                 .order("day_date", { ascending: true });
@@ -539,7 +406,7 @@
         }
 
         async function renderMonthSummary() {
-            if (!supabaseClient || !currentUser) {
+            if (!supabaseClient) {
                 clearMonthSummary();
                 return;
             }
@@ -571,7 +438,7 @@
 
         async function loadSelectedDateData() {
             const selected = ids.workDate.value;
-            if (!supabaseClient || !currentUser || !selected) {
+            if (!supabaseClient || !selected) {
                 clearInputs();
                 return;
             }
@@ -579,7 +446,6 @@
             const { data, error } = await supabaseClient
                 .from(TABLE_NAME)
                 .select("hours_worked, phones_repaired, insurance_signups, total_customers, five_star_reviews")
-                .eq("user_id", currentUser.id)
                 .eq("day_date", selected)
                 .maybeSingle();
 
@@ -621,11 +487,6 @@
                 return;
             }
 
-            if (!currentUser) {
-                alert("Please sign in first.");
-                return;
-            }
-
             const selectedDate = ids.workDate.value;
             if (!selectedDate) {
                 alert("Please choose a date.");
@@ -639,7 +500,6 @@
             }
 
             const row = {
-                user_id: currentUser.id,
                 day_date: selectedDate,
                 hours_worked: daily.hoursWorked,
                 phones_repaired: daily.phonesRepaired,
@@ -653,7 +513,7 @@
 
             const { error } = await supabaseClient
                 .from(TABLE_NAME)
-                .upsert(row, { onConflict: "user_id,day_date" });
+                .upsert(row, { onConflict: "day_date" });
 
             if (error) {
                 alert(`Save failed: ${error.message}`);
@@ -673,9 +533,6 @@
 
         ids.saveBtn.addEventListener("click", saveDayRecord);
         ids.clearBtn.addEventListener("click", clearInputs);
-        ids.signInBtn.addEventListener("click", handleSignIn);
-        ids.signUpBtn.addEventListener("click", handleSignUp);
-        ids.signOutBtn.addEventListener("click", handleSignOut);
         ids.workDate.addEventListener("change", async () => {
             await loadSelectedDateData();
         });
@@ -684,17 +541,11 @@
         async function initializeApp() {
             setDefaultDate();
             renderDailySummary();
-            setTrackerEnabled(false);
             clearMonthSummary();
 
             if (initSupabase()) {
-                const { data, error } = await supabaseClient.auth.getSession();
-                if (error) {
-                    setAuthStatus(`Session check failed: ${error.message}`, true);
-                    return;
-                }
-
-                await handleAuthState(data.session);
+                await loadSelectedDateData();
+                await renderMonthSummary();
             }
         }
 
