Update print statement from 'Hello' to 'Goodbye'

--- a/homepage.html
+++ b/homepage.html
@@ -959,6 +959,7 @@
             }
 
             await renderMonthSummary();
+            await render12MonthChart();
             alert("Saved.");
         }
 
